# ros_rl_for_slam

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md
ancro_description/: CMakeLists.txt  README.md  package.xml
ancro_description/meshes/: base_link.stl  left_wheel_1.stl  lidar_1.stl  right_wheel_1.stl
ancro_description/urdf/: ancro-copy.xacro  ancro.gazebo.xacro  ancro.trans  ancro.xacro  materials.xacro
ancro_description/worlds/: ancro.world  ancro2.world  ancro3.world
custom_gmapping/: CMakeLists.txt  package.xml
custom_gmapping/src/: main.cpp  slam_gmapping.cpp  slam_gmapping.h
custom_gmapping/srv/: SlamCmd.srv
custom_gmapping/test/: .rtest.cpp.swp  basic_localization_laser_different_beamcount.test  basic_localization_stage.launch  basic_localization_stage_replay.launch  basic_localization_stage_replay2.launch  basic_localization_symmetry.launch  basic_localization_upside_down.launch  test_map.py
dqn_for_slam/: .gitignore  CMakeLists.txt  package.xml  setup.py
dqn_for_slam/dqn_for_slam/: custom_policy.py  rl_worker.py
dqn_for_slam/dqn_for_slam/config/: rlslam_map_reward.yaml
dqn_for_slam/dqn_for_slam/environment/: __init__.py  robot_rl_env.py
rosbot_description/src/rosbot_description/urdf/: rosbot-copy.xacro  rosbot.gazebo  rosbot.xacro
rosbot_description/src/rosbot_gazebo/launch/: rosbot_world.launch
simulate_robot_rl/: CMakeLists.txt  package.xml
simulate_robot_rl/config/: .localization.yaml.swp  laser_filter.yaml  localization.yaml  robot.rviz
simulate_robot_rl/launch/: bringup_rl_worker.launch  localization.launch  robot_laser_filter.launch  robot_slam.launch  simulate_robot.launch  spawn_robot.launch
simulate_robot_rl/scripts/: robot_teleop.py  run_agent.sh
simulation_map/: CMakeLists.txt  package.xml
simulation_map/launch/: maze1_nogui.launch  test_map1.launch  test_map1_nogui.launch  train.launch
simulation_map/models/maze1/: model.config  model.sdf
simulation_map/models/test_room1/: model.config  model.sdf
simulation_map/worlds/: maze1.world  test_world1.world  train-world-1.world  train-world-2.world  train-world-3.world  train-world-4.world
slam_gmapping/gmapping/: CMakeLists.txt
slam_gmapping/gmapping/src/: slam_gmapping.cpp  slam_gmapping.h
