<?xml version="1.0"?>
<package format="2">
  <name>simulate_robot_rl</name>
  <version>0.0.0</version>
  <description>The simulate_robot package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="yukiya@todo.todo">yukiya</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>laser_filters</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>laser_filters</build_export_depend>
  <build_export_depend>robot_localization</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>laser_filters</exec_depend>
  <exec_depend>robot_localization</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
